Adjust flex to prevent version wrapping

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -185,6 +185,7 @@ html.is-clipped--nav {
 }
 
 .nav-panel-explore .context .version {
+  flex-shrink: 0;
   display: flex;
   align-items: inherit;
 }
